--- a/index/style.css
+++ b/index/style.css
@@ -1,3 +1,56 @@
+* {
+  margin: 0;
+  padding: 0;
+  font-family: 'Epilogue', sans-serif; }
 
+body {
+  background: #e6dede; }
+
+.container {
+  background: white;
+  width: 80%;
+  margin: auto;
+  padding: 10px;
+  display: grid; }
+  .container > div:nth-child(odd) {
+    background: skyblue; }
+
+header {
+  display: flex;
+  margin: 40px;
+  justify-content: space-around;
+  color: red; }
+  header span {
+    color: #08030a; }
+  header button {
+    border-radius: 50px;
+    background: transparent; }
+
+.text {
+  text-align: center;
+  margin-bottom: 100px; }
+
+.cards {
+  margin: 20px 0 0 0;
+  display: grid;
+  grid-auto-flow: column; }
+  .cards .content {
+    padding: 20px; }
+  .cards h3 {
+    margin-bottom: 20px; }
+  .cards img {
+    background-size: cover;
+    width: 100%;
+    height: 250px; }
+  .cards button {
+    cursor: pointer;
+    background: black;
+    color: white;
+    padding: 10px;
+    margin-top: 10px;
+    border-radius: .4em; }
+    .cards button:hover {
+      background: white;
+      color: #060711; }
 
 /*# sourceMappingURL=style.css.map */
