--- a/index/style.scss
+++ b/index/style.scss
@@ -4,20 +4,23 @@
     font-family: 'Epilogue', sans-serif;
 }
 
+$ease-in: ease-in 500ms;
 body {
     background: rgb(230, 222, 222);
 }
 
 .container {
-    background: white;
+    background: rgb(8, 10, 32);
     width: 80%;
     margin: auto;
     padding: 10px;
-    display: grid;
     & > div {
         &:nth-child(odd) {
             background: skyblue;
         }
+    }
+    & > div:nth-child(even) {
+        color: white;
     }
 }
 
@@ -27,11 +30,17 @@ header {
     justify-content: space-around;
     color: red;
     span {
-        color: rgb(8, 3, 10)
+        color: rgb(236, 234, 236)
     }
     button {
+        cursor: pointer;
         border-radius: 50px;
-        background: transparent;
+        background: rgb(241, 63, 63);
+        color: rgb(254, 255, 255);
+        &:hover {
+            background: transparent;
+            transition: $ease-in;
+        }
     }
 }
 
@@ -39,12 +48,19 @@ header {
 .text {
     text-align: center;
     margin-bottom: 100px;
+    color: white;
 }
 
 .cards {
     margin: 20px 0 0 0;
     display: grid;
-    grid-auto-flow: column;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 2em;
+    grid-auto-rows: min-max(300px, auto);
+    grid-auto-columns: 300px;
+    justify-items: center;
+    align-items: center;
+
     .content {
         padding: 20px;
     }
@@ -69,8 +85,9 @@ header {
         margin-top: 10px;
         border-radius: .4em;
         &:hover {
-            background: white;
+            background: rgb(228, 211, 211);
             color: rgb(6, 7, 17);
+            transition: $ease-in;
         }
     }
 }
