--- a/index/style.css
+++ b/index/style.css
@@ -6,6 +6,9 @@
 body {
   background: #e6dede; }
 
+h1, h3 {
+  font-family: Georgia, 'Times New Roman', Times, serif; }
+
 .container {
   background: #080a20;
   width: 80%;
@@ -14,11 +17,11 @@ body {
   .container > div:nth-child(odd) {
     background: skyblue; }
   .container > div:nth-child(even) {
-    color: white; }
+    background: white; }
 
 header {
+  margin-top: 60px;
   display: flex;
-  margin: 40px;
   justify-content: space-around;
   color: red; }
   header span {
@@ -34,26 +37,30 @@ header {
 
 .text {
   text-align: center;
-  margin-bottom: 100px;
+  margin: 40px 0 150px;
   color: white; }
 
 .cards {
-  margin: 20px 0 0 0;
+  margin: 0 0 20px 0;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 2em;
-  grid-auto-rows: min-max(300px, auto);
+  grid-auto-rows: min-max(400px, auto);
   grid-auto-columns: 300px;
   justify-items: center;
   align-items: center; }
+  .cards:nth-child(even) img {
+    order: 2; }
   .cards .content {
-    padding: 20px; }
+    padding: 20px;
+    font-size: 15px;
+    line-height: 17px; }
   .cards h3 {
     margin-bottom: 20px; }
   .cards img {
     background-size: cover;
     width: 100%;
-    height: 250px; }
+    height: 350px; }
   .cards button {
     cursor: pointer;
     background: black;
@@ -65,5 +72,10 @@ header {
       background: #e4d3d3;
       color: #060711;
       transition: ease-in 500ms; }
+
+@media (max-width: 700px) {
+  .cards {
+    display: block;
+    margin: 15px 30px; } }
 
 /*# sourceMappingURL=style.css.map */
