Adjusted the media queries to work cross-devices

--- a/index/style.css
+++ b/index/style.css
@@ -76,6 +76,27 @@ header {
 @media (max-width: 700px) {
   .cards {
     display: block;
-    margin: 15px 30px; } }
+    margin: 15px 30px; }
+    .cards img {
+      height: 200px;
+      width: 100%; }
+    .cards .content {
+      padding: 5px; }
+
+  header {
+    display: block; }
+    header button {
+      float: right;
+      padding: 5px; } }
+@media (max-width: 500px) {
+  .content {
+    height: minmax(200px, auto);
+    font-size: 16px; }
+
+  .cards h3 {
+    color: red;
+    margin: 5px; }
+  .cards button {
+    padding: 5px; } }
 
 /*# sourceMappingURL=style.css.map */
