--- a/style.css
+++ b/style.css
@@ -6,9 +6,6 @@
 body {
   background: #e6dede; }
 
-h1, h3 {
-  font-family: Georgia, 'Times New Roman', Times, serif; }
-
 .container {
   background: #080a20;
   width: 80%;
@@ -17,11 +14,11 @@ h1, h3 {
   .container > div:nth-child(odd) {
     background: skyblue; }
   .container > div:nth-child(even) {
-    background: white; }
+    color: white; }
 
 header {
-  margin-top: 60px;
   display: flex;
+  margin: 40px;
   justify-content: space-around;
   color: red; }
   header span {
@@ -37,30 +34,26 @@ header {
 
 .text {
   text-align: center;
-  margin: 40px 0 150px;
+  margin-bottom: 100px;
   color: white; }
 
 .cards {
-  margin: 0 0 20px 0;
+  margin: 20px 0 0 0;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 2em;
-  grid-auto-rows: min-max(400px, auto);
+  grid-auto-rows: min-max(300px, auto);
   grid-auto-columns: 300px;
   justify-items: center;
   align-items: center; }
-  .cards:nth-child(even) img {
-    order: 2; }
   .cards .content {
-    padding: 20px;
-    font-size: 15px;
-    line-height: 17px; }
+    padding: 20px; }
   .cards h3 {
     margin-bottom: 20px; }
   .cards img {
     background-size: cover;
     width: 100%;
-    height: 350px; }
+    height: 250px; }
   .cards button {
     cursor: pointer;
     background: black;
