--- a/style.scss
+++ b/style.scss
@@ -9,9 +9,6 @@ body {
     background: rgb(230, 222, 222);
 }
 
-h1, h3 {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-}
 .container {
     background: rgb(8, 10, 32);
     width: 80%;
@@ -21,15 +18,15 @@ h1, h3 {
         &:nth-child(odd) {
             background: skyblue;
         }
-        &:nth-child(even) {
-            background: rgb(255, 255, 255);
-        }
+    }
+    & > div:nth-child(even) {
+        color: white;
     }
 }
 
 header {
-    margin-top: 60px;
     display: flex;
+    margin: 40px;
     justify-content: space-around;
     color: red;
     span {
@@ -50,36 +47,34 @@ header {
 
 .text {
     text-align: center;
-    margin: 40px 0 150px;
+    margin-bottom: 100px;
     color: white;
 }
 
 .cards {
-    margin: 0 0 20px 0;
+    margin: 20px 0 0 0;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 2em;
-    grid-auto-rows: min-max(400px, auto);
+    grid-auto-rows: min-max(300px, auto);
     grid-auto-columns: 300px;
     justify-items: center;
     align-items: center;
-    &:nth-child(even) img{
-        order: 2;
-    }
 
     .content {
         padding: 20px;
-        font-size: 15px;
-        line-height: 17px;
     }
     h3 {
         margin-bottom: 20px;
     }
-    
+    .img {
+       // padding: 20px;
+       
+    }
     img {
         background-size: cover;
         width: 100%;
-        height: 350px;
+        height: 250px;
     }
 
     button {
@@ -95,6 +90,7 @@ header {
             transition: $ease-in;
         }
     }
+
 }
 
 @media (max-width:700px) {
