--- a/index/style.scss
+++ b/index/style.scss
@@ -117,6 +117,11 @@ header {
 }
 
 @media (max-width:500px) {
+    .container {
+        background: rgb(226, 227, 235);
+        width: 95%;
+        margin: auto;
+    }
     .content {
         height: minmax(200px, auto);
         font-size: 16px;
